--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -57,29 +57,31 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-4">
-                        <span class="copyright">Copyright &copy; Esporles B.C. 2019</span>
+                        <span class="copyright">Esporles B.C. 2019</span>
                     </div>
                     <div class="col-md-4">
-                      <ul class="list-inline social-buttons">
-                        <li class="list-inline-item">
-                          <a href="#">
-                            <i class="fab fa-twitter"></i>
-                          </a>
-                        </li>
-                        <li class="list-inline-item">
-                          <a href="#">
-                            <i class="fab fa-facebook-f"></i>
-                          </a>
-                        </li>
-                        <li class="list-inline-item">
-                          <a href="#">
-                            <i class="fab fa-linkedin-in"></i>
-                          </a>
-                        </li>
-                      </ul>
+                        {% comment %}
+                            <ul class="list-inline social-buttons">
+                                <li class="list-inline-item">
+                                  <a href="#">
+                                    <i class="fab fa-twitter"></i>
+                                  </a>
+                                </li>
+                                <li class="list-inline-item">
+                                  <a href="#">
+                                    <i class="fab fa-facebook-f"></i>
+                                  </a>
+                                </li>
+                                <li class="list-inline-item">
+                                  <a href="#">
+                                    <i class="fab fa-linkedin-in"></i>
+                                  </a>
+                                </li>
+                              </ul>
+                        {% endcomment %}
                     </div>
                     <div class="col-md-4">
-                        Desenvolupat per <a href="#">semicolom;</a>
+                        Desenvolupat per <a href="http://www.semicolom.com/" title="Django web apps and API development">semicolom;</a>
                     </div>
                 </div>
             </div>
