Adds html logic when there is no data

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -60,6 +60,9 @@
                         <span class="copyright">Esporles B.C. 2019</span>
                     </div>
                     <div class="col-md-4">
+                        <a href="http://esporlesbc.com/" title="Esporles Bàsquet Club" target="_blank">
+                            <img src="{% static "images/esporles-bc-logo.png" %}" alt="Logo Esporles Bàsquet Club" height="90px">
+                        </a>
                         {% comment %}
                             <ul class="list-inline social-buttons">
                                 <li class="list-inline-item">
