--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <title>Acampabásquet 2019 | Esporles Bàsquet Club</title>
+        <title>{{ SITE_NAME }} | Esporles Bàsquet Club</title>
         <meta name="description" content="">
         <meta name="author" content="Toni Colom www.semicolom.com">
 
@@ -28,7 +28,7 @@
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="{% url 'home' %}">Acampabàsquet</a>
+                <a class="navbar-brand js-scroll-trigger" href="{% url 'home' %}">{{ SITE_NAME }}</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
