--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -11,6 +11,8 @@
         <meta name="description" content="">
         <meta name="author" content="Toni Colom www.semicolom.com">
 
+        {% include "djtools/seo/google_analytics.html" %}
+
         <!-- Bootstrap core CSS -->
         <link href="{% static "vendor/bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
 
@@ -63,25 +65,6 @@
                         <a href="http://esporlesbc.com/" title="Esporles Bàsquet Club" target="_blank">
                             <img src="{% static "images/esporles-bc-logo.png" %}" alt="Logo Esporles Bàsquet Club" height="90px">
                         </a>
-                        {% comment %}
-                            <ul class="list-inline social-buttons">
-                                <li class="list-inline-item">
-                                  <a href="#">
-                                    <i class="fab fa-twitter"></i>
-                                  </a>
-                                </li>
-                                <li class="list-inline-item">
-                                  <a href="#">
-                                    <i class="fab fa-facebook-f"></i>
-                                  </a>
-                                </li>
-                                <li class="list-inline-item">
-                                  <a href="#">
-                                    <i class="fab fa-linkedin-in"></i>
-                                  </a>
-                                </li>
-                              </ul>
-                        {% endcomment %}
                     </div>
                     <div class="col-md-4">
                         Desenvolupat per <a href="http://www.semicolom.com/" title="Django web apps and API development">semicolom;</a>
