--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -26,7 +26,6 @@
     </head>
 
     <body id="page-top">
-
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
@@ -50,7 +49,7 @@
         </nav>
 
         {# space #}
-        <div><br></div>
+        <div class="d-none d-lg-block d-xl-block"><br></div>
 
         {% block content %}{% endblock content %}
 
