--- a/src/templates/main/group_detail.html
+++ b/src/templates/main/group_detail.html
@@ -5,42 +5,46 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading text-uppercase">{{ group }}</h2>
+                    <h2>{{ group }}</h2>
                 </div>
             </div>
 
             <div class="row">
-                {% with group.team_set.all as teams %}
-                    {% if teams %}
-                        <h3>Resultats</h3>
-                        <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                            <thead>
-                                <tr>
-                                    <th scope="col">Equip</th>
-                                    <th scope="col">Partits jugats</th>
-                                    <th scope="col">Partits guanyats</th>
-                                    <th scope="col">Partits perduts</th>
-                                    <th scope="col">Punts a favor</th>
-                                    <th scope="col">Punts en contra</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for team in group.team_set.all %}
-                                    <tr>
-                                        <td><a href="{% url 'team' team.id %}">{{ team.name }}</a></td>
-                                        <td>{{ team.games_played }}</td>
-                                        <td>{{ team.games_won }}</td>
-                                        <td>{{ team.games_lost }}</td>
-                                        <td>{{ team.points }}</td>
-                                        <td>{{ team.points_against }}</td>
-                                    </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    {% else %}
-                        <p>Aquest grup encara no te equips assignats</p>
-                    {% endif %}
-                {% endwith %}
+                <div class="col-md-12">
+                    {% with group.team_set.all as teams %}
+                        {% if teams %}
+                            <h3>Resultats</h3>
+                            <div class="table-responsive">
+                                <table class="table table-dark table-hover">
+                                    <thead>
+                                        <tr>
+                                            <th scope="col">Equip</th>
+                                            <th scope="col">Partits jugats</th>
+                                            <th scope="col">Partits guanyats</th>
+                                            <th scope="col">Partits perduts</th>
+                                            <th scope="col">Punts a favor</th>
+                                            <th scope="col">Punts en contra</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        {% for team in group.team_set.all %}
+                                            <tr>
+                                                <td><a href="{% url 'team' team.id %}">{{ team.name }}</a></td>
+                                                <td>{{ team.games_played }}</td>
+                                                <td>{{ team.games_won }}</td>
+                                                <td>{{ team.games_lost }}</td>
+                                                <td>{{ team.points }}</td>
+                                                <td>{{ team.points_against }}</td>
+                                            </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        {% else %}
+                            <p>Aquest grup encara no te equips assignats</p>
+                        {% endif %}
+                    {% endwith %}
+                </div>
             </div>
 
             {% include "main/matches_snippet.html" %}
