--- a/src/templates/main/groups.html
+++ b/src/templates/main/groups.html
@@ -5,33 +5,37 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading text-uppercase">Grups</h2>
+                    <h2>Grups</h2>
                 </div>
             </div>
 
             <div class="row">
-                {% if groups %}
-                    <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                        <thead>
-                            <tr>
-                                <th scope="col">Nom</th>
-                                <th scope="col">Categoria</th>
-                                <th scope="col">Modelitat</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for group in groups %}
-                                <tr>
-                                    <td><a href="{% url 'group-detail' group.id %}">{{ group.name }}</a></td>
-                                    <td>{{ group.get_category_display }}</td>
-                                    <td>{{ group.get_modality_display }}</td>
-                                </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                {% else %}
-                    <p>Encara no s'han creat els grups</p>
-                {% endif %}
+                <div class="col-md-12">
+                    {% if groups %}
+                        <div class="table-responsive">
+                            <table class="table  table-dark table-hover">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">Nom</th>
+                                        <th scope="col">Categoria</th>
+                                        <th scope="col">Modelitat</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for group in groups %}
+                                        <tr>
+                                            <td><a href="{% url 'group-detail' group.id %}">{{ group.name }}</a></td>
+                                            <td>{{ group.get_category_display }}</td>
+                                            <td>{{ group.get_modality_display }}</td>
+                                        </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    {% else %}
+                        <p>Encara no s'han creat els grups</p>
+                    {% endif %}
+                </div>
             </div>
         </div>
     </section>
