Timezone and html improvements

--- a/src/templates/main/group_detail.html
+++ b/src/templates/main/group_detail.html
@@ -47,6 +47,9 @@
                 </div>
             </div>
 
+            {# space #}
+            <div><br></div>
+
             {% include "main/matches_snippet.html" %}
         </div>
     </section>
