--- a/src/templates/main/team_detail.html
+++ b/src/templates/main/team_detail.html
@@ -10,30 +10,32 @@
             </div>
 
             <div class="row">
-                <h3>Resultats</h3>
-                <div class="table-responsive">
-                    <table class="table table-dark table-hover">
-                        <thead>
-                            <tr>
-                                <th scope="col">Partits jugats</th>
-                                <th scope="col">Partits guanyats</th>
-                                <th scope="col">Partits perduts</th>
-                                <th scope="col">Punts a favor</th>
-                                <th scope="col">Punts en contra</th>
-                                <th scope="col">Categoria</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>{{ team.games_played }}</td>
-                                <td>{{ team.games_won }}</td>
-                                <td>{{ team.games_lost }}</td>
-                                <td>{{ team.points }}</td>
-                                <td>{{ team.points_against }}</td>
-                                <td><a href="{% url 'group-detail' group.id %}">{{ group }}</a></td>
-                            </tr>
-                        </tbody>
-                    </table>
+                <div class="col-lg-12">
+                    <h3>Resultats</h3>
+                    <div class="table-responsive">
+                        <table class="table table-dark table-hover">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Partits jugats</th>
+                                    <th scope="col">Partits guanyats</th>
+                                    <th scope="col">Partits perduts</th>
+                                    <th scope="col">Punts a favor</th>
+                                    <th scope="col">Punts en contra</th>
+                                    <th scope="col">Categoria</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>{{ team.games_played }}</td>
+                                    <td>{{ team.games_won }}</td>
+                                    <td>{{ team.games_lost }}</td>
+                                    <td>{{ team.points }}</td>
+                                    <td>{{ team.points_against }}</td>
+                                    <td><a href="{% url 'group-detail' group.id %}">{{ group }}</a></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
 
