Adds logic for small groups

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -23,6 +23,12 @@
 
         <!-- Custom styles for this template -->
         <link href="{% static "css/agency.css" %}" rel="stylesheet">
+
+        <style type="text/css">
+            .container {
+                max-width: none !important;
+            }
+        </style>
     </head>
 
     <body id="page-top">
