--- a/src/templates/main/group_detail.html
+++ b/src/templates/main/group_detail.html
@@ -15,7 +15,7 @@
                         {% if teams %}
                             <h3>Resultats</h3>
                             <div class="table-responsive">
-                                <table class="table table-dark table-hover">
+                                <table class="table table-dark table-hover text-nowrap">
                                     <thead>
                                         <tr>
                                             <th scope="col">Equip</th>
