--- a/src/templates/main/groups.html
+++ b/src/templates/main/groups.html
@@ -13,7 +13,7 @@
                 <div class="col-md-12">
                     {% if groups %}
                         <div class="table-responsive">
-                            <table class="table  table-dark table-hover">
+                            <table class="table table-dark table-hover text-nowrap">
                                 <thead>
                                     <tr>
                                         <th scope="col">Nom</th>
