--- a/src/templates/main/matches_snippet.html
+++ b/src/templates/main/matches_snippet.html
@@ -3,7 +3,7 @@
         <h3>Partits</h3>
         {% if matches %}
             <div class="table-responsive">
-                <table class="table table-dark table-hover">
+                <table class="table table-dark table-hover text-nowrap">
                     <thead>
                         <tr>
                             <th scope="col">Hora</th>
