--- a/src/templates/main/team_detail.html
+++ b/src/templates/main/team_detail.html
@@ -5,7 +5,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>{{ team }}</h2>
+                    <h2>Equip {{ team }}</h2>
                 </div>
             </div>
 
@@ -13,7 +13,7 @@
                 <div class="col-lg-12">
                     <h3>Resultats</h3>
                     <div class="table-responsive">
-                        <table class="table table-dark table-hover">
+                        <table class="table table-dark table-hover text-nowrap">
                             <thead>
                                 <tr>
                                     <th scope="col">Partits jugats</th>
