--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -11,7 +11,17 @@
         <meta name="description" content="">
         <meta name="author" content="Toni Colom www.semicolom.com">
 
-        {% include "djtools/seo/google_analytics.html" %}
+        {% if GOOGLE_ANALYTICS_TRACKING_ID %}
+            <!-- Global site tag (gtag.js) - Google Analytics -->
+            <script async src="https://www.googletagmanager.com/gtag/js?id={{ GOOGLE_ANALYTICS_TRACKING_ID }}"></script>
+            <script>
+              window.dataLayer = window.dataLayer || [];
+              function gtag(){dataLayer.push(arguments);}
+              gtag('js', new Date());
+
+              gtag('config', '{{ GOOGLE_ANALYTICS_TRACKING_ID }}');
+            </script>
+        {% endif %}
 
         <!-- Bootstrap core CSS -->
         <link href="{% static "vendor/bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
@@ -64,7 +74,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-4">
-                        <span class="copyright">Esporles B.C. 2019</span>
+                        <span class="copyright">Esporles B.C. {% now 'Y' %}</span>
                     </div>
                     <div class="col-md-4">
                         <a href="http://esporlesbc.com/" title="Esporles Bàsquet Club" target="_blank">
@@ -72,7 +82,7 @@
                         </a>
                     </div>
                     <div class="col-md-4">
-                        Desenvolupat per <a href="http://www.semicolom.com/" title="Django web apps and API development">semicolom;</a>
+                        Desenvolupat per <a href="http://www.semicolom.com/" title="Django web apps and API development">Toni Colom</a>
                     </div>
                 </div>
             </div>
