--- a/src/templates/main/admin/matches_changelist.html
+++ b/src/templates/main/admin/matches_changelist.html
@@ -1,12 +1,8 @@
-{% extends 'admin/change_list.html' %}
+{% extends 'adminsortable2/change_list.html' %}
 
-{% block object-tools %}
-    <div>
-        <form action="schedule/" method="POST">
-            {% csrf_token %}
-            <button type="submit">Crear partits</button>
-        </form>
-    </div>
-    <br />
+{% block object-tools-items %}
+    <li>
+        <a href="schedule/" class="btn btn-high btn-success">Crear partits</a>
+    </li>
     {{ block.super }}
 {% endblock %}
