--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,4 +1,6 @@
-{% load static %}
+{% load static solo_tags %}
+
+{% get_solo 'main.SiteConfiguration' as site_config %}
 
 <!DOCTYPE html>
 <html lang="ca">
@@ -10,18 +12,6 @@
         <title>{{ SITE_NAME }} | Esporles Bàsquet Club</title>
         <meta name="description" content="">
         <meta name="author" content="Toni Colom www.semicolom.com">
-
-        {% if GOOGLE_ANALYTICS_TRACKING_ID %}
-            <!-- Global site tag (gtag.js) - Google Analytics -->
-            <script async src="https://www.googletagmanager.com/gtag/js?id={{ GOOGLE_ANALYTICS_TRACKING_ID }}"></script>
-            <script>
-              window.dataLayer = window.dataLayer || [];
-              function gtag(){dataLayer.push(arguments);}
-              gtag('js', new Date());
-
-              gtag('config', '{{ GOOGLE_ANALYTICS_TRACKING_ID }}');
-            </script>
-        {% endif %}
 
         <!-- Bootstrap core CSS -->
         <link href="{% static "vendor/bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
@@ -59,6 +49,11 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'groups' %}">Grups</a>
                         </li>
+                        {% if site_config.rules_file %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ MEDIA_URL }}{{ site_config.rules_file }}" target="_blank">Normes generals</a>
+                            </li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
@@ -72,17 +67,11 @@
         <!-- Footer -->
         <footer class="footer">
             <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-md-4">
-                        <span class="copyright">Esporles B.C. {% now 'Y' %}</span>
-                    </div>
-                    <div class="col-md-4">
+                <div class="row">
+                    <div class="col-md-12">
                         <a href="http://esporlesbc.com/" title="Esporles Bàsquet Club" target="_blank">
                             <img src="{% static "images/esporles-bc-logo.png" %}" alt="Logo Esporles Bàsquet Club" height="90px">
                         </a>
-                    </div>
-                    <div class="col-md-4">
-                        Desenvolupat per <a href="http://www.semicolom.com/" title="Django web apps and API development">Toni Colom</a>
                     </div>
                 </div>
             </div>
